Fixed author to center and single line on small devices

--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -8,10 +8,6 @@ img {
     max-width: 100%;
 }
 
-.post-footer .author {
-  margin-right: 100px;
-}
-
 .author {
    font-family: "Open Sans",sans-serif;
    display: inline-block;
@@ -26,7 +22,9 @@ img {
 
   .vcard {
     color: #9EABB3;
+    display: block;
     padding: 10px;
     font-size: 1.5rem;
+    float: left;
   }
 }
